force-app/main/default/objects/x7s_qstn__Questionnaire_Completed__c/x7s_qstn__Questionnaire_Completed__c.object-meta.xml
<CustomObject>
    <label>Completed Questionnaire</label>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>Completed Questionnaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>