force-app/main/default/objects/x7s_qstn__Questionnaire_Completed__c/fields/x7s_qstn__Contact__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact the responses are associated with</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Completed Questionnaires</relationshipLabel>
    <relationshipName>Completed_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>