force-app/main/default/objects/x7s_qstn__Questionnaire_Completed__c/fields/x7s_qstn__Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Questionnaire__c</fullName>
    <inlineHelpText>The questionnaire the responses are associated with</inlineHelpText>
    <label>Questionnaire</label>
    <referenceTo>x7s_qstn__Questionnaire__c</referenceTo>
    <relationshipLabel>Completed Questionnaires</relationshipLabel>
    <relationshipName>Completed_Questionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>