force-app/main/default/objects/x7s_qstn__Questionnaire_Completed__c/fields/x7s_qstn__Responses__c.field-meta.xml
<CustomField>
    <fullName>x7s_qstn__Responses__c</fullName>
    <inlineHelpText>The saved responses from the questionnaire</inlineHelpText>
    <label>Responses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>